# rsgrpc

./: file_service.proto
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: fs_backend.rs  main.rs
service/: Cargo.toml  build.rs
service/src/: lib.rs
testbed/: file3.txt
