[package]
name = "server"
version = "0.1.0"
authors = ["JT Parrish <jtparrish@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version="0.3.1",features = ["tls"]}
tokio = {version="0.2.24",features = ["stream", "macros"]}
service = { path = "../service", version = "0.1.0" }