[package]
name = "service"
version = "0.1.0"
authors = ["JT Parrish <jtparrish@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version="0.3.1",features = ["tls"]}

[build-dependencies]
tonic-build = "0.3.1"